[package]
name = "rustpanda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glommio = "0.9.0"
crc32fast = "1.3"
tempfile = "3.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "wal_bench"
harness = false

[lib]
name = "rustpanda"
path = "src/lib.rs"

[[bin]]
name = "rustpanda"
path = "src/main.rs"